chore: fix astro errors, tests and update config
